Fix: list page/fixed sidebar, solve the issue that the sidebar jumps outside of viewing area when user scrolls page to the very bottom

--- a/src/pages/feedbacks/ListPage/style.scss
+++ b/src/pages/feedbacks/ListPage/style.scss
@@ -47,6 +47,7 @@
       top: 0;
       width: 255px;
       height: 100vh;
+      margin-bottom: -100px;
     }
     &__nav-items {
       flex-direction: column;
